@@ -39,6 +39,7 @@ source "$APPSDIR/examples/pipe/Kconfig"
 source "$APPSDIR/examples/poll/Kconfig"
 source "$APPSDIR/examples/pwm/Kconfig"
 source "$APPSDIR/examples/qencoder/Kconfig"
+source "$APPSDIR/examples/relays/Kconfig"
 source "$APPSDIR/examples/rgmp/Kconfig"
 source "$APPSDIR/examples/romfs/Kconfig"
 source "$APPSDIR/examples/sendmail/Kconfig"
